fixed alignment on addbutton

--- a/content/css/core.css
+++ b/content/css/core.css
@@ -563,7 +563,7 @@ input.file {
 .addbutton{
   /*  padding-top: 10px;*/
     padding-left: 20px;
-
+    text-align: right;
 }
 
 
